// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. four child elements 1`] = `
Array [
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <Text>
      support-1
    </Text>
  </View>,
  <View />,
  <View>
    <Text>
      support-2
    </Text>
  </View>,
]
`;

exports[`2. tablet - four child elements 1`] = `
<View>
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <View>
      <Text>
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>
</View>
`;
